--- a/public/Site/HTWF/css/new.css
+++ b/public/Site/HTWF/css/new.css
@@ -1,12 +1,36 @@
 .my-main-menu{
-    background: #008B8B;
+    background: #008B8B !important;
     
 }
 .my-main-menu  a{
     color:white !important;
+    font-size:15px !important;
 
 }
 
 .my-main-menu .inner-a{
     color:#008B8B !important;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .my-main-menu{
+        background: #008B8B !important;
+        
+    }
+    .my-main-menu  a{
+        color:white !important;
+        font-size:20px !important;
+        padding:10px 10px !important;
+    
+    }
+    
+    .my-main-menu .inner-a{
+        color:#008B8B !important;
+        background: white !important; 
+    }
+    .my-main-menu .inner-a:hover{
+        color:#008B8B !important;
+        background: white !important; 
+    }
+  }
