--- a/public/Site/HTWF/css/new.css
+++ b/public/Site/HTWF/css/new.css
@@ -50,9 +50,12 @@
     }
 
     .ateliers{
-     margin: auto;
-     padding: 10px;
-        width: 95%;
+     
+     padding: 10px !important;
+        width: 100% !important;
+        padding:0 !important;
+        margin:0 !important;
+        padding:10px !important;
     }
     
   }
