--- a/public/Site/HTWF/css/new.css
+++ b/public/Site/HTWF/css/new.css
@@ -1,8 +1,14 @@
+
 .my-main-menu .icons-for-mobile-view{
 display:none !important;
 }
+
+
+
 .my-main-menu{
     background: #008B8B !important;
+   
+      
 }
 .my-main-menu  a{
     color:white !important;
@@ -13,12 +19,13 @@ display:none !important;
 .my-main-menu  a:hover{
     background:#4eeeee !important;
     color:#008 !important;
+
 }
 .my-main-menu .inner-a{
     color:#008B8B !important;
 }
 
-.my-main-menu .inner-a:hover{
+.my-main-menu ul>li:hover{
     background:#4eeeee !important;
     color:#008 !important;
 }
@@ -38,13 +45,51 @@ display:none !important;
     
   }
 
+  @media only screen and (min-width: 768px) {
+    .container-changes{
+        width:100%!important;
+        padding-left:100px!important;
+        padding-right: 0px !important;
+        
+    }
+    .navbar-changes{
+        
+    }
+    .my-main-menu ul>li{
+    padding:0px 5px !important;
+    }
+    .my-main-menu ul{
+        padding-top:10px !important;
+        padding-left:10px !important;
+        }
+
+        .my-main-menu  a:hover{
+            font-size:15px !important;
+        }
+
+  }
+
 @media only screen and (max-width: 768px) {
+    .toggle-button-changes{
+        float: left; 
+        margin-left:50px;
+        margin-top:20px !important;
+    }
+    .toggle-logo-changes{
+        margin-left:40px;
+        
+    }
+    .my-main-menu ul>li{
+        padding:0px 0px !important;
+        }
     /* For mobile phones: */
     .my-main-menu  a{
-        
         font-size:20px !important;
         padding:20px 10px !important;
-    
+    }
+    .my-main-menu  a:hover{
+        font-size:25px !important;
+        
     }
     
     .my-main-menu .inner-a{
