--- a/public/Site/HTWF/css/new.css
+++ b/public/Site/HTWF/css/new.css
@@ -14,6 +14,7 @@ display:none !important;
     color:white !important;
     font-size:14px !important;
     
+    
 }
 
 .my-main-menu  a:hover{
@@ -23,6 +24,7 @@ display:none !important;
 }
 .my-main-menu .inner-a{
     color:#008B8B !important;
+    
 }
 
 .my-main-menu ul>li:hover{
@@ -52,9 +54,9 @@ display:none !important;
         padding-right: 0px !important;
         
     }
-    .navbar-changes{
+    /* .navbar-changes{
         
-    }
+    } */
     .my-main-menu ul>li{
     padding:0px 5px !important;
     }
@@ -86,6 +88,7 @@ display:none !important;
     .my-main-menu  a{
         font-size:20px !important;
         padding:20px 10px !important;
+        font-family:'Aclonica' !important;
     }
     .my-main-menu  a:hover{
         font-size:25px !important;
